--- a/webtest1/web02.yaml
+++ b/webtest1/web02.yaml
@@ -34,7 +34,7 @@ data:
     <!DOCTYPE html>
     <html>
     <body>
-      <h1>¡Esta es la Web 2!</h1>
+      <h1>¡Esta es la Web 2! mejorada</h1>
     </body>
     </html>
 ---
